# WebSite-project-ballc

./: .env_example  .gitignore  DEVLOG.md  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: lint.yml
backend/: .flake8  BACKENDLOG.md  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/migrations/versions/: 40eb010d589f_initial_migration.py
backend/website/: __init__.py  models.py
backend/website/api/: __init__.py  auth_routes.py  routes.py
bailee-ann-llc-backend/: .gitignore  Dockerfile  README.md  app.py  package-lock.json  pyproject.toml  requirements.txt  schema.sql
bailee-ann-llc-backend/.github/workflows/: lint.yml
bailee-ann-llc-backend/instance/: database.db
bailee-ann-llc-backend/migrations/versions/: 40eb010d589f_initial_migration.py
bailee-ann-llc-backend/website/: __init__.py  database.db  dump.sql  views.py
bailee-ann-llc-backend/website/api/: __init__.py  auth_routes.py  routes.py
bailee-ann-llc-backend/website/templates/: base.html  home.html  login.html  logout.html  signup.html
frontend/: package-lock.json  package.json
